--- a/http/style/style.css
+++ b/http/style/style.css
@@ -63,7 +63,13 @@ body {
 }
 
 #logo {
-	float: left;
+position:absolute;
+	top:10px; 
+	left:25px; 
+    z-index: 100;
+	background-image: url(/img/puac.png);
+ 	width: 102px;
+	height: 102px;
 }
 
 #title {
