--- a/http/style/style.css
+++ b/http/style/style.css
@@ -60,6 +60,7 @@ body {
 	-webkit-border-radius:0 0 4px 4px;
 	-o-border-radius:0 0 4px 4px;
 	border-radius:0 0 4px 4px;
+	 margin: 0px 15px;
 }
 
 #logo {
@@ -76,12 +77,17 @@ position:absolute;
 	float: center;
 	margin: auto;
 	text-align:center;
-	width: 160px;
+	width: 160px
+
+
 }
 
 #title a {
 	text-decoration: none;
+	text-shadow: 2px 2px 2px #000;
+	font-family: Delicious, sans-serif;
 }
+	
 
 #title h1 {
 	color: rgb(255, 255, 255);
@@ -149,15 +155,14 @@ h3 {
     width: 95%;
     background: none repeat scroll 0% 0% rgba(255, 255, 255, 0.75);
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 25px;
+    margin-bottom: 0px;
 }
 
 #container h1 {
 	font-weight:bold;
 	font-size:24px;
 	border-bottom:1px dashed #d4d4d4;
-	margin-bottom:20px;
 }
 
 input.error {
